--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,11 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--bg-color);
+  background-color: white;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: white;
+  background-color: var(--bg-color);
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
@@ -461,7 +461,6 @@ h2 {
   position: relative;
 }
 
-
 .service4:hover .service4_item_detail {
   display: flex;
   transform: translateY(5px);
@@ -584,4 +583,96 @@ h2 {
 .service4_item_detail--plus:hover {
   cursor: pointer;
   color: var(--text-color);
+}
+
+/* container5 */
+
+.container5 {
+  margin-top: 30px;
+  width: 100%;
+}
+
+.service5 {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 25px;
+}
+
+.service5_item {
+  width: 360px;
+}
+
+.service5_item img {
+  width: 100%;
+}
+
+.service5_item p {
+  font-size: 15px;
+  font-weight: 600;
+  margin-top: 5px;
+}
+
+
+/* container6 */
+
+.container6 {
+  margin-top: 30px;
+}
+
+.paragraph {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--text-color);
+  margin: auto;
+  width: 750px;
+  line-height: 1.9;
+}
+
+.service6_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-top: 40px;
+
+}
+ 
+
+.service6_item_more {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 210px;
+}
+
+.service6_item_more:nth-child(1){
+  opacity: 0.5;
+}
+
+.service6_item_more:nth-child(3){
+  opacity: 0.5;
+}
+
+
+.service6_item_more img {
+  width: 100%;
+}
+
+.service6_item_more p {
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--text-color);
+  margin-top: 5px;
+}
+
+.dot {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 9px;
+}
+
+.dot i {
+  color: rgb(168, 168, 168);
 }
